Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.30**

****	Add vhier --xml. [David Asher]

****	Fix net used lint warnings after pin deletes, bug343. [David Chinnery]

* Verilog::Language 3.306 2011/03/07

****	Fix block comment not separating identifiers, bug311. [Gene Sullivan]

* Verilog::Language 3.305 2010/12/03

***	Add -F option to read relative option files, bug297. [Neil Hamilton]

***	Fix env var expansion from Getopt, bug298.  [John Dickol]

****	Fix removing defines without ` when non-SystemC, bug300. [John Dickol]

* Verilog::Language 3.304 2010/10/25

****	Fix file_substitute expanding ~, msg382.  [Neil Hamilton]

****	Fix wrong filename on include file errors, bug289. [Brad Parker]

* Verilog::Language 3.303 2010/09/20

***	Add vrename --changelang option, to upgrade keywords. [Dan Moore]

***	Add vrename --language option. [Dan Moore]

***	Add Verilog::Language::language_maximum and language_keywords.

****	Fix escaped identifiers that are keywords, bug282. [Dan Moore]

****	Fix preprocessor `` of base define, bug283.  [Usha Priyadharshini]

* Verilog::Language 3.302 2010/08/26

****	Increase define recursions before error.  [Paul Liu]

****	Fix documentation on verilog_text and link, bug278. [Mike Z]

****	Use Digest::SHA instead of SHA1, bug277.  [Ahmed El-Mahmoudy]

****	Fix false test failure if Math::BigInt not installed.

* Verilog::Language 3.301 2010/08/04

****	Improve Bison/flex skipping to increase CPAN-Testers pass rate.

* Verilog::Language 3.300 2010/08/02

**	Support SystemVerilog 2009 standard, including new keywords.

***	Bison/flex are no longer required to build, unless sources are changed.

****	Fix preprocessing ifdef `INDIRECT(DEFINE).

****	Fix preprocessor preservation of newlines across macro substitutions.
