@@ -12,6 +12,9 @@ use Config;
 sub MY::postamble {
     my $out="";
     # Note OPTIMIZE is passed from upper makefile, so this code needed there too.
+    # -O2 optimization seems unreasonably slow on nearly every platform.  I give up.
+    my $optimize = $Config{optimize};  $optimize =~ s/(^| )-O2( |$)/\1-O\2/g;
+    $out .= "OPTIMIZE = $optimize\n";
     if ($Config{osname} =~ /cygwin/i || $Config{archname} =~ /cygwin/i) {
 	# Cygwin ExtUtils::MakeMaker ignores our LIBS declaration and says
 	# "No library found for -lstdc++".  Force it.
