@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix net used lint warnings after pin deletes, bug343. [David Chinnery]
 
+****	When making, turn down GCC optimization to O1 to avoid GCC hang bug.
+
 * Verilog::Language 3.306 2011/03/07
 
 ****	Fix block comment not separating identifiers, bug311. [Gene Sullivan]
